# type-aliases

./: .markdownlint-cli2.jsonc  .markdownlint.jsonc  .pre-commit-config.yaml  flake.nix  pyproject.toml
type_aliases/: __init__.py
